--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "nodemon": "^1.18.4"
   },
   "dependencies": {
+    "bcrypt": "3.0.2",
+    "body-parser": "1.18.3",
     "express": "4.16.4"
   }
 }
