added auth functions

--- a/package.json
+++ b/package.json
@@ -37,8 +37,9 @@
     "nodemon": "^1.18.4"
   },
   "dependencies": {
-    "bcrypt": "https://github.com/kelektiv/node.bcrypt.js.git#master",
+    "bcrypt": "3.0.2",
     "body-parser": "1.18.3",
-    "express": "4.16.4"
+    "express": "4.16.4",
+    "request": "2.88.0"
   }
 }
