--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.1",
     "babel-preset-env": "^1.7.0",
+    "babel-register": "^6.26.0",
     "dotenv": "^6.1.0",
     "eslint": "^5.7.0",
     "eslint-config-airbnb-base": "^13.1.0",
