--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "bcrypt": "3.0.2",
     "body-parser": "1.18.3",
     "express": "4.16.4",
+    "express-session": "1.15.6",
     "morgan": "1.9.1",
     "pg": "7.6.0",
     "pg-hstore": "2.3.2",
