--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "bcrypt": "3.0.2",
     "body-parser": "1.18.3",
+    "elasticsearch": "15.2.0",
     "express": "4.16.4",
     "express-session": "1.15.6",
     "morgan": "1.9.1",
