--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "body-parser": "1.18.3",
     "elasticsearch": "15.2.0",
     "express": "4.16.4",
+    "express-jwt": "5.3.1",
     "express-session": "1.15.6",
+    "jsonwebtoken": "8.3.0",
     "morgan": "1.9.1",
     "pg": "7.6.0",
     "pg-hstore": "2.3.2",
