--- a/.babelrc
+++ b/.babelrc
@@ -2,6 +2,7 @@
 	"presets": [["env",{"targets": { "node": "8" }}]],
 	"ignore": [
     "./config",
-    "./migrations"
+    "./migrations",
+    "./src/models/index.js"
 	]
 }
